Revision history for Class-Method-Modifiers

1.12    2012-10-28
        Another MANIFEST fix

1.11    2012-10-28
        Re-release with proper distribution contents and MANIFEST

1.10    2012-10-23
        Avoid "Variable "$..." will not stay shared" warnings under 5.8.x
        (from changes in 1.09) [#80194] (Karen Etheridge)

1.09    2012-04-02
        Install modified subs in the proper namespace [#74569]
        (Karen Etheridge)

1.08    Sun Oct 16 2011
        Document install_modifier (requested by Tokuhiro Matsuno)

1.07    Wed Feb 23 2011
        Move from Test::Exception to Test::Fatal (Justin Hunter)

1.06    Fri Nov 26 2010
        Add support for: modifier ["name1", "name2"] => sub {}

1.05    Wed Oct 21 14:01:11 2009
        Add install_modifier as a public API (Goro Fuji)

1.04    Mon Jun 15 11:33:31 2009
        We need parens around confess if we're going to delay-load
            Carp, affects only 5.10 (reported by David Raab)

1.03    Sun Jun 14 14:44:25 2009
        Modernize the dist
        Fix possible test failures
        Only load Carp if we have to

1.02    Sun May 31 23:33:42 2009
        Fix for void context (reported by tokuhirom)
        Lift dependency on on MRO::Compat

1.01    Thu Jun 26 22:22:30 2008
        Revert the caching fix. It makes wrapping parent-class methods
            painfully slower.
        Remove the prototypes, newer Perls (rightly) warn about (@&)

1.00    Wed Jun 11 06:10:51 2008
        Complete reimplementation. Half the code. Faster than Moose.
        Remove 'guard' for now.
        *All* internals are changed.

0.07    Wed Sep 12 21:55:16 2007
        Add 'guard' modifier to facilitate bailing out in some conditions

0.06    Sun Sep  9 23:27:50 2007
        You may now modify a method in the same class as it is defined

0.05    Fri Aug 17 23:26:53 2007
        More internals fixes (I'm abusing this module a bit, you see)
        Grammar fixes

0.04    Fri Aug 17 17:49:55 2007
        Internals changes
