@@ -1,5 +1,8 @@
 Revision history for Class-Method-Modifiers
 
+NEXT
+        New 'fresh' modifier (Aaron Crane)
+
 1.12    2012-10-28
         Another MANIFEST fix
 
